--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
     <head>
         <title>Jerome Molasky's Portfolio</title>
@@ -12,6 +7,8 @@
             name="viewport"
             content="width=device-width, initial-scale=1, user-scalable=no"
         />
+
+        <link rel="icon" href="images/favicon.ico" />
         <link rel="stylesheet" href="assets/css/main.css" />
         <script
             type="text/javascript"
