adds resume download button

--- a/index.html
+++ b/index.html
@@ -338,6 +338,15 @@
                         Python, and Django.
                     </p>
 
+                    <a
+                        href="./images/Molasky_Jerome_Resume.pdf"
+                        id="download"
+                        class="button"
+                        download
+                        >Download my resume</a
+                    >
+                    <br />
+
                     <img
                         class="image featured"
                         src="images/interconnected.jpg"
