updates about me section

--- a/index.html
+++ b/index.html
@@ -325,10 +325,12 @@
 
                     <p>
                         I am a software engineer with a humanities background
-                        and overseas work experience who is adept both at
-                        analyzing minutiae without losing sight of the larger
-                        context and at quickly adapting to changing or
-                        unfamiliar circumstances.
+                        and overseas work experience. While adept at analyzing
+                        minutiae, I never lose sight of a project’s larger
+                        context. I recently completed General Assembly's
+                        Software Engineering Immersive course, where I explored
+                        my passion for designing user-friendly, efficient
+                        applications that help simplify people’s lives.
                     </p>
                     <p>
                         My experience includes various front-end technologies
