--- a/index.html
+++ b/index.html
@@ -324,13 +324,15 @@
                     </header>
 
                     <p>
-                        I am a software engineer with a humanities background
-                        and overseas work experience. While adept at analyzing
-                        minutiae, I never lose sight of a project’s larger
-                        context. I recently completed General Assembly's
-                        Software Engineering Immersive course, where I explored
-                        my passion for designing user-friendly, efficient
-                        applications that help simplify people’s lives.
+                        I am a software engineer whose humanities background and
+                        overseas work experience have developed both my ability
+                        to analyze how a project’s minutiae fit into its larger
+                        context and my capacity for articulating complex ideas
+                        clearly and simply. I recently completed General
+                        Assembly's Software Engineering Immersive course, where
+                        I explored my passion for designing user-friendly,
+                        efficient applications that help simplify people’s
+                        lives.
                     </p>
                     <p>
                         My experience includes various front-end technologies
