updates about me

--- a/index.html
+++ b/index.html
@@ -324,15 +324,7 @@
                     </header>
 
                     <p>
-                        I am a software engineer whose humanities background and
-                        overseas work experience have developed both my ability
-                        to analyze how a project’s minutiae fit into its larger
-                        context and my capacity for articulating complex ideas
-                        clearly and simply. I recently completed General
-                        Assembly's Software Engineering Immersive course, where
-                        I explored my passion for designing user-friendly,
-                        efficient applications that help simplify people’s
-                        lives.
+                        I am a software engineer whose humanities background and overseas work experience have developed both my analytical capabilities and my ability to articulate complex ideas clearly and simply. I am passionate about designing user-friendly, efficient applications that help enrich people’s lives.
                     </p>
                     <p>
                         My experience includes various front-end technologies
