add new project

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                     >
                                         <div class="overlay">
                                             <div class="text">
-                                                A full stack web application
+                                                A web application
                                                 created in collaboration with
                                                 two peers that allows users to
                                                 view an aggregation of all of
@@ -312,6 +312,37 @@
                                 </header>
                             </article>
                         </div>
+                        <div class="col-4 col-12-mobile">
+                            <article class="item">
+                                <div class="overlay-container image fit">
+                                    <img src="images/bridge.gif" alt="" />
+                                    <a
+                                        target="_blank"
+                                        href="https://bridge-climate-app.netlify.app/"
+                                    >
+                                        <div class="overlay">
+                                            <div class="text">
+                                                A web application
+                                                built in collaboration with 3
+                                                other software engineers and 3 UX
+                                                designers for users to learn
+                                                and share information about climate 
+                                                change.
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <header>
+                                    <h3>
+                                        <a
+                                            href="https://github.com/International-Aid-Hackathon-Team-7"
+                                            target="_blank"
+                                            >Bridge App</a
+                                        >
+                                    </h3>
+                                </header>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -324,7 +355,10 @@
                     </header>
 
                     <p>
-                        I am a software engineer whose humanities background and overseas work experience have developed both my analytical capabilities and my ability to articulate complex ideas clearly and simply. I am passionate about designing user-friendly, efficient applications that help enrich people’s lives.
+                        I am a software engineer whose humanities background and overseas work 
+                        experience have developed both my analytical capabilities and my ability 
+                        to articulate complex ideas clearly and simply. I am passionate about 
+                        designing user-friendly, efficient applications that help enrich people’s lives.
                     </p>
                     <p>
                         My experience includes various front-end technologies
