change profile picture

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!-- Logo -->
                 <div id="logo">
                     <span class="image avatar48"
-                        ><img src="images/jerome.jpg" alt=""
+                        ><img src="images/jerome.jpeg" alt=""
                     /></span>
                     <h1 id="title">Jerome Molasky</h1>
                     <p>Software Engineer</p>
