change Heroku links to Railway links

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                     <img src="images/linklist.gif" alt="" />
                                     <a
                                         target="_blank"
-                                        href="https://link-list-92.herokuapp.com/"
+                                        href="https://link-list.up.railway.app/"
                                     >
                                         <div class="overlay">
                                             <div class="text">
@@ -287,7 +287,7 @@
                                     <img src="images/coinbank.gif" alt="" />
                                     <a
                                         target="_blank"
-                                        href="https://coin-bank.herokuapp.com/"
+                                        href="https://coin-bank.up.railway.app/"
                                     >
                                         <div class="overlay">
                                             <div class="text">
@@ -362,9 +362,9 @@
                     </p>
                     <p>
                         My experience includes various front-end technologies
-                        such as HTML/CSS3, JavaScript, React, jQuery, and
+                        such as HTML/CSS3, JavaScript, React, jQuery, SASS, and
                         Bootstrap, as well as back-end technologies such as
-                        NodeJS, ExpressJS, MongoDB, Mongoose, PostgreSQL,
+                        NodeJS, ExpressJS, MongoDB, Mongoose, PostgreSQL, PHP,
                         Python, and Django.
                     </p>
 
