--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                 </header>
                             </article>
                         </div>
-                        <div class="col-4 col-12-mobile">
+                        <!-- <div class="col-4 col-12-mobile">
                             <article class="item">
                                 <div class="overlay-container image fit">
                                     <img src="images/bridge.gif" alt="" />
@@ -342,7 +342,7 @@
                                     </h3>
                                 </header>
                             </article>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -357,14 +357,14 @@
                     <p>
                         I am a software engineer whose humanities background and overseas work 
                         experience have developed both my analytical capabilities and my ability 
-                        to articulate complex ideas clearly and simply. I am passionate about 
-                        designing user-friendly, efficient applications that help enrich people’s lives.
+                        to articulate complex ideas clearly and simply. I am passionate about learning 
+                        new technologies and building user-friendly, efficient applications.
                     </p>
                     <p>
                         My experience includes various front-end technologies
-                        such as HTML/CSS3, JavaScript, React, jQuery, SASS, and
+                        such as HTML/CSS3, JavaScript, React, jQuery, SASS/SCSS, and
                         Bootstrap, as well as back-end technologies such as
-                        NodeJS, ExpressJS, MongoDB, Mongoose, PostgreSQL, PHP,
+                        NodeJS, ExpressJS, MongoDB, Mongoose, SQL, PHP,
                         Python, and Django.
                     </p>
 
