--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
                         My experience includes various front-end technologies
                         such as HTML/CSS3, JavaScript, React, jQuery, SASS/SCSS, and
                         Bootstrap, as well as back-end technologies such as
-                        NodeJS, ExpressJS, MongoDB, Mongoose, SQL, PHP,
-                        Python, and Django.
+                        NodeJS, ExpressJS, PHP, Linux, RESTful APIs, AWS, Postman, MongoDB, Mongoose, 
+                        MySQL, and Python.
                     </p>
 
                     <a
