--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     </header>
                     <p id="contact-p">Send me an email!</p>
 
-                    <form id="contact-form" method="post" action="#">
+                    <form id="contact-form" method="post" action="mailto:jeromemolasky@gmail.com" enctype="text/plain">
                         <input type="hidden" name="contact_number" />
                         <div class="row">
                             <div class="col-6 col-12-mobile">
